# ColorPad-Argyll

./: README.md  build-profile.json5
.github/workflows/: build.yml
AppScope/: app.json5
Stage/src/main/: module.json5
Stage/src/ohosTest/: module.json5
core/: build-ohos.bat  build-ohos.sh
core/argyllcms/: Jambase  Jamfile  ReadMe.txt  afiles  makepackagebin.sh
core/argyllcms/cgats/: Makefile  afiles
core/argyllcms/doc/: ArgyllDoc.html  ChangesSummary.html  Scenarios.html  afiles  dispcal.html  dispread.html  instruments.html
core/argyllcms/gamut/: GenRMGam.c  gammap.c  gamut.h  maptest.c  viewgam.c
core/argyllcms/h/: aconfig.h  counters.h
core/argyllcms/icc/: Makefile  Readme.txt  afiles  icc.c  icc.h  icc_pe.c  icc_util.c  icc_util.h  icc_xf.c  icc_xf.h  log.txt
core/argyllcms/imdi/: cctiff.c  greytiff.c
core/argyllcms/link/: collink.c  pathplot.c
core/argyllcms/numlib/: Jamfile  afiles  numsup.c  numsup.h  tconjgrad.c  tvarmet.c
core/argyllcms/plot/: plot.c  plot.h  vrml.c  vrml.h
core/argyllcms/profile/: Jamfile  applycal.c  colprof.c  colverify.c  iccvcgt.c  invprofcheck.c  mppcheck.c  mppprof.c  printcal.c  prof.h  profcheck.c  profin.c  profout.c  splitti3.c
core/argyllcms/ref/: linear.cal  strange.cal
core/argyllcms/rspl/: c1df.c  rspl.c  rspl.h  (+2 more)
core/patches/: argyll-paths.patch  libusb-harmonyos.patch
harmony/: build-profile.json5  oh-package.json5
harmony/AppStore/: app.json5
harmony/entry/: build-profile.json5  oh-package.json5
harmony/entry/src/main/cpp/: CMakeLists.txt  argyll_bridge.cpp
scripts/: ci-build.sh
(+71 files in other folders)
